tools/deploy/templates/namespace.yaml
#@ load("@ytt:data", "data")

apiVersion: v1
kind: Namespace
metadata:
  name: #@ data.values.namespace
  labels:
    app: #@ data.values.name
