tools/deploy/templates/03-deployment.yaml
#@ load("@ytt:data", "data")

#@ def s3_secret_name():
#@   if data.values.s3.existingSecret:
#@     return data.values.s3.existingSecret
#@   else:
#@     return data.values.name + "-secrets"
#@   end
#@ end

apiVersion: apps/v1
kind: Deployment
metadata:
  name: #@ data.values.name
  namespace: #@ data.values.namespace
  labels:
    app: #@ data.values.name
spec:
  replicas: 2
  selector:
    matchLabels:
      app: #@ data.values.name
  template:
    metadata:
      labels:
        app: #@ data.values.name
    spec:
      containers:
      - name: #@ data.values.name
        image: #@ data.values.image.repository + ":" + data.values.image.tag
        imagePullPolicy: #@ data.values.image.pullPolicy
        ports:
        - containerPort: 3000
          name: http
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 20
          periodSeconds: 10
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
