tools/deploy/templates/service.yaml
#@ load("@ytt:data", "data")

apiVersion: v1
kind: Service
metadata:
  name: #@ data.values.name
  namespace: #@ data.values.namespace
  labels:
    app: #@ data.values.name
spec:
  type: ClusterIP
  ports:
    - port: #@ data.values.service.port
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: #@ data.values.name
