tools/deploy/templates/ingress.yaml
#@ load("@ytt:data", "data")

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: #@ data.values.name
  namespace: #@ data.values.namespace
  labels:
    app: #@ data.values.name
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: #@ data.values.ingress.host
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: #@ data.values.name
            port:
              number: #@ data.values.service.port
  tls:
  - hosts:
    - #@ data.values.ingress.host
    secretName: #@ data.values.name + "-tls"
